--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
 	"name": "datavizfinalproj",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "This is a designated course project for NCU's Data Visualization course, and it will be a web page representation of what we did in the course.",
-	"main": "index.js",
+	"main": "src/server/app.ts",
 	"scripts": {
-		"build": "rollup -c -w"
+		"build": "rollup -c",
+		"dev": "rollup -c -w",
+		"serve": "tsx ./src/server/app.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -12,12 +15,28 @@
 	"devDependencies": {
 		"@babel/core": "^7.23.3",
 		"@babel/preset-react": "^7.23.3",
+		"@babel/preset-typescript": "^7.23.3",
 		"@rollup/plugin-babel": "^6.0.4",
 		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-dsv": "^3.0.4",
+		"@rollup/plugin-json": "^6.0.1",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-replace": "^5.0.5",
+		"@rollup/plugin-typescript": "^11.1.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"rollup": "^4.6.0"
+		"react-router": "^6.20.0",
+		"react-router-dom": "^6.20.0",
+		"rollup": "^4.6.0",
+		"rollup-plugin-css-only": "^4.5.2",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.2"
+	},
+	"dependencies": {
+		"@types/node": "^20.10.0",
+		"@types/react": "^18.2.39",
+		"@types/react-dom": "^18.2.17",
+		"express": "^4.18.2",
+		"tsx": "^4.6.0"
 	}
 }
