--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"@babel/core": "^7.23.3",
 		"@babel/preset-react": "^7.23.3",
 		"@babel/preset-typescript": "^7.23.3",
+		"@headlessui/react": "^1.7.17",
+		"@heroicons/react": "^2.0.18",
 		"@rollup/plugin-babel": "^6.0.4",
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-dsv": "^3.0.4",
@@ -23,12 +25,14 @@
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-replace": "^5.0.5",
 		"@rollup/plugin-typescript": "^11.1.5",
+		"autoprefixer": "^10.4.16",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router": "^6.20.0",
 		"react-router-dom": "^6.20.0",
 		"rollup": "^4.6.0",
-		"rollup-plugin-css-only": "^4.5.2",
+		"rollup-plugin-postcss": "^4.0.2",
+		"tailwindcss": "^3.3.6",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.2"
 	},
